frontController, boardList 기능 추가

--- a/jsp(게시판)/게시판(model)/Example1230/src/main/webapp/WEB-INF/web.xml
+++ b/jsp(게시판)/게시판(model)/Example1230/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 <web-app>
 	<servlet>
 		<servlet-name>controller</servlet-name>
-		<servlet-class>Example1230.controller.MemberController</servlet-class>
+		<servlet-class>Example1230.controller.FrontController</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
