--- a/Spring/springTest/src/main/webapp/WEB-INF/web.xml
+++ b/Spring/springTest/src/main/webapp/WEB-INF/web.xml
@@ -5,12 +5,18 @@
 
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
+		<!-- root-context : bean 등록하는 xml파일 경로 지정 -->
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value> 
+			<!-- /WEB-INF/spring/root-context.xml -->
+			classpath:config/root-context.xml
+			classpath:config/security.xml
+		</param-value>
 	</context-param>
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
+	<!-- 감지기,  -->
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
@@ -18,20 +24,50 @@
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<!-- servlet 지정 -->
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			<!-- servlet 경로(주소) -->
+			<param-value>
+			<!-- /WEB-INF/spring/appServlet/servlet-context.xml  -->
+				classpath:config/servlet-context.xml
+			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 		
 	<servlet-mapping>
+		<!-- 가상경로변수 설정 -->
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
-	<servlet-mapping>
+		<servlet-mapping>
+		<!-- 가상경로변수 설정 -->
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<filter>
+	<!-- 모든 값을 UTF-8 로 인코딩한다. -->
+    <filter-name>encodingFilter</filter-name>
+    <filter-class>
+            org.springframework.web.filter.CharacterEncodingFilter
+    </filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+	</filter>
+	<filter-mapping>
+	  <filter-name>encodingFilter</filter-name>
+	  <url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	
+	
+	
+	
+	
+	
 
 </web-app>
